2009-10-01  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_wireless_chooser.c: 
	  Hide chooser dialog if emission isn't being stopped.
	* common/nwamui_daemon.c: 
	  Minor debug message change.
	* daemon/status_icon.c: 
	  Change slightly the logic of the showing of the wifi selection
	  dialog. If the dialog is still visible, then set it's urgency flag
	  to draw some attention to it.
	* data/Makefile.am:
	  Fix install issue, where it was installing the schema from the
	  daemon directory instead of the data directory as expected.

2009-09-30  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_wireless_chooser.c: 
	  Use the display string rather than just essid for rendering the
	  network name, since it is more informative, especially if you have
	  more than one wifi device.

2009-09-29  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c: 
	  Handle get/set of behaviour if no favourites found.
	  Hide the "Ask before..." expander and children since nothing in
	  there is implemented on nwamd side.
	* capplet/nwam_wireless_chooser.c: 
	  Set a busy cursor while waiting for scan data to be filled.
	* common/nwamui_daemon.c: 
	  Queue up wifi scan events, sending only one one event per network.
	* daemon/main.c: 
	  Remove nwamui_prof settings from here and put in status_icon.c since
	  they are used there.
	* capplet/Makefile.am:
	  Add wireless_chooser_dialog to the libcapplet library, so it can be
	  used in the daemon.
	* daemon/status_icon.c: 
	  Handle the configured behaviour where no favourites networks are
	  found. Don't show a notify message, just the wireless chooser
	  dialog, if set.
	* data/nwam-manager.schemas.in:
	  Add schema entry for configuration key action_on_no_fav_networks.
	  Default is to show the wireless chooser dialog.
	* common/nwamui_prof.c, common/nwamui_prof.h:
	  Add enum for action types if no favourite networks are found.
	* nwam_core/usr/include/inetcfg.h:
	  Update to latest header.